# prep_2026

./: README.md
ai/crew-ai/stock_briefing_neuralnine/: .editorconfig  README.md  pyproject.toml
ai/crew-ai/stock_briefing_neuralnine/src/stock_briefing_neuralnine/: crew.py  main.py
ai/crew-ai/stock_briefing_neuralnine/src/stock_briefing_neuralnine/config/: agents.yaml  tasks.yaml
ai/crew-ai/stock_briefing_neuralnine/src/stock_briefing_neuralnine/tools/: custom_tool.py
ai/langchain/basic-ai-agent/: package-lock.json  package.json  tsconfig.json
ai/langchain/basic-ai-agent/src/: index.ts
ai/langchain/basic-chat-app/: .gitignore  package-lock.json  package.json  tsconfig.json
ai/langchain/langchain-crash-fcc/: langchain_helper.py  main.py
ai/langchain/langchain-crash-neuralnine/: .gitignore
ai/langchain/langchain-crash-neuralnine/src/: main-advanced-agent.py  main-middleware.py  main-multi-agent.py  main.py
js/eloq_js/: .gitignore  exercises-solutions.txt  package.json
js/eloq_js/ch002_prog_structure/: ex01_fizz_buzz.js  ex02_loop_triangle.js  ex03_chessboard.js
js/eloq_js/ch003_functions/: eg001_fn_definition.js  eg002_bindings_scopes.js  eg003_nested_scope.js  eg004_call_stack.js  eg005_closure.js  eg006_recursion.js  eg007_growing_functions.js
js/eloq_js/ch004_data_structures_objects_and_arrays/: ex_001.js  ex_002.js  ex_003.js  ex_lycanthropes_log.js
js/eloq_js/ch008_bugs_errors/: demo001_strict_mode_upto_testing.js  demo002_debugging-through-assertion.js
js/eloq_js/ch011_aync_prog/: readfile.js
py/python-playground/: main.py
(+77 files in other folders)
