[project]
name = "stock_briefing_neuralnine"
version = "0.1.0"
description = "stock_briefing_neuralnine using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "crewai[tools]==1.14.7",
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "fastapi-sso>=0.21.1",
    "litellm>=1.89.3",
    "yfinance>=1.4.1",
]

[project.scripts]
stock_briefing_neuralnine = "stock_briefing_neuralnine.main:run"
run_crew = "stock_briefing_neuralnine.main:run"
train = "stock_briefing_neuralnine.main:train"
replay = "stock_briefing_neuralnine.main:replay"
test = "stock_briefing_neuralnine.main:test"
run_with_trigger = "stock_briefing_neuralnine.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
